# RoombaVirtualWall

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  IRBuilder.cpp  IRBuilder.hpp  IRExpressionBuilder.cpp  IRExpressionBuilder.hpp  rvwmain.cpp
app/src/main/java/xyz/dnigamer/roombavirtualwall/: IrExpression.kt  IrExpressionBuilder.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pt/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
